syntax = "proto3";

package app;

service UsersController {
    rpc GetUsers (CarrieredMessage) returns (UserArray);
    rpc AddUser (CarrieredMessage) returns (User);
}

message CarrieredMessage {
    map<string, string> carrier = 1;
    Corpus corpus = 4;
}
enum Corpus {
    User = 0;
    UserArray = 1;
    Empty = 2;
}

message User {
    required string username = 1;
    required string email = 2;
    required string cityName = 3;
    required string birthDate = 4;
    required string password = 5;
}

message UserArray {
    repeated User users = 1;
}

message Empty {
}
